# tree-sitter-rescript

./: README.md
implementation/: Cargo.toml  binding.gyp  grammar.js  package.json
implementation/corpus/: attribute.txt  comments.txt  implementation.txt  structure_item_region.txt  type_params.txt
implementation/src/: grammar.json  node-types.json  parser.c
