[package]
name = "tree-sitter-rescript"
description = "ReScript grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "rescript"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/youxkei/tree-sitter-rescript"
edition = "2018"
license = "CC0-1.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
